MiniCSProject/oldFiles/miniCSharpParser.js
// Generated from C:/Users/BryanH/WebstormProjects/MiniCSProject\miniCSharpParser.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var miniCSharpParserVisitor = require('../parserVisitor/miniCSharpParserVisitor').miniCSharpParserVisitor;

var grammarFileName = "miniCSharpParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'class'", "'char'", "'int'", "'float'", "'boolean'", 
                     "'string'", "'const'", "'void'", "'++'", "'--'", "'if'", 
                     "'else'", "'for'", "'while'", "'foreach'", "'break'", 
                     "'return'", "'new'", "'true'", "'false'", "'read'", 
                     "'write'", "';'", "','", "'='", "'('", "')'", "'{'", 
                     "'}'", "'||'", "'&&'", "'.'", "'['", "']'", "'-'", 
                     "'+'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='" ];

var symbolicNames = [ null, "CLASS", "CHARDECL", "INTDECL", "FLOATDECL", 
                      "BOOLEANDECL", "STRINGDECL", "CONST", "VOID", "DOBLEMAS", 
                      "DOBLEMENOS", "IF", "ELSE", "FOR", "WHILE", "FOREACH", 
                      "BREAK", "RETURN", "NEW", "TRUE", "FALSE", "READ", 
                      "WRITE", "PyCOMA", "COMA", "ASIGN", "PIZQ", "PDER", 
                      "BRACKETIZQ", "BRACKETDER", "OR", "AND", "POINT", 
                      "CORCHETEIZQ", "CORCHETEDER", "MENOS", "MAS", "MUL", 
                      "DIV", "DIVMODULAR", "IGUALIGUAL", "DIFERENTE", "MAYORQUE", 
                      "MENORQUE", "MAYORIGUALQUE", "MENORIGUALQUE", "NUMBER", 
                      "IDENTIFIER", "CHARCONST", "STRING", "LINE_COMMENT", 
                      "SPECIAL_COMMENT", "WS" ];

var ruleNames =  [ "program", "constDecl", "varDecl", "classDecl", "methodDecl", 
                   "formPars", "type", "statement", "block", "actPars", 
                   "condition", "condTerm", "condFact", "expr", "term", 
                   "factor", "designator", "relop", "addop", "mulop" ];

function miniCSharpParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

miniCSharpParser.prototype = Object.create(antlr4.Parser.prototype);
miniCSharpParser.prototype.constructor = miniCSharpParser;

Object.defineProperty(miniCSharpParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

miniCSharpParser.EOF = antlr4.Token.EOF;
miniCSharpParser.CLASS = 1;
miniCSharpParser.CHARDECL = 2;
miniCSharpParser.INTDECL = 3;
miniCSharpParser.FLOATDECL = 4;
miniCSharpParser.BOOLEANDECL = 5;
miniCSharpParser.STRINGDECL = 6;
miniCSharpParser.CONST = 7;
miniCSharpParser.VOID = 8;
miniCSharpParser.DOBLEMAS = 9;
miniCSharpParser.DOBLEMENOS = 10;
miniCSharpParser.IF = 11;
miniCSharpParser.ELSE = 12;
miniCSharpParser.FOR = 13;
miniCSharpParser.WHILE = 14;
miniCSharpParser.FOREACH = 15;
miniCSharpParser.BREAK = 16;
miniCSharpParser.RETURN = 17;
miniCSharpParser.NEW = 18;
miniCSharpParser.TRUE = 19;
miniCSharpParser.FALSE = 20;
miniCSharpParser.READ = 21;
miniCSharpParser.WRITE = 22;
miniCSharpParser.PyCOMA = 23;
miniCSharpParser.COMA = 24;
miniCSharpParser.ASIGN = 25;
miniCSharpParser.PIZQ = 26;
miniCSharpParser.PDER = 27;
miniCSharpParser.BRACKETIZQ = 28;
miniCSharpParser.BRACKETDER = 29;
miniCSharpParser.OR = 30;
miniCSharpParser.AND = 31;
miniCSharpParser.POINT = 32;
miniCSharpParser.CORCHETEIZQ = 33;
miniCSharpParser.CORCHETEDER = 34;
miniCSharpParser.MENOS = 35;
miniCSharpParser.MAS = 36;
miniCSharpParser.MUL = 37;
miniCSharpParser.DIV = 38;
miniCSharpParser.DIVMODULAR = 39;
miniCSharpParser.IGUALIGUAL = 40;
miniCSharpParser.DIFERENTE = 41;
miniCSharpParser.MAYORQUE = 42;
miniCSharpParser.MENORQUE = 43;
miniCSharpParser.MAYORIGUALQUE = 44;
miniCSharpParser.MENORIGUALQUE = 45;
miniCSharpParser.NUMBER = 46;
miniCSharpParser.IDENTIFIER = 47;
miniCSharpParser.CHARCONST = 48;
miniCSharpParser.STRING = 49;
miniCSharpParser.LINE_COMMENT = 50;
miniCSharpParser.SPECIAL_COMMENT = 51;
miniCSharpParser.WS = 52;

miniCSharpParser.RULE_program = 0;
miniCSharpParser.RULE_constDecl = 1;
miniCSharpParser.RULE_varDecl = 2;
miniCSharpParser.RULE_classDecl = 3;
miniCSharpParser.RULE_methodDecl = 4;
miniCSharpParser.RULE_formPars = 5;
miniCSharpParser.RULE_type = 6;
miniCSharpParser.RULE_statement = 7;
miniCSharpParser.RULE_block = 8;
miniCSharpParser.RULE_actPars = 9;
miniCSharpParser.RULE_condition = 10;
miniCSharpParser.RULE_condTerm = 11;
miniCSharpParser.RULE_condFact = 12;
miniCSharpParser.RULE_expr = 13;
miniCSharpParser.RULE_term = 14;
miniCSharpParser.RULE_factor = 15;
miniCSharpParser.RULE_designator = 16;
miniCSharpParser.RULE_relop = 17;
miniCSharpParser.RULE_addop = 18;
miniCSharpParser.RULE_mulop = 19;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniCSharpParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;


 
ProgramContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ProgramNContext(parser, ctx) {
	ProgramContext.call(this, parser);
    ProgramContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ProgramNContext.prototype = Object.create(ProgramContext.prototype);
ProgramNContext.prototype.constructor = ProgramNContext;

miniCSharpParser.ProgramNContext = ProgramNContext;

ProgramNContext.prototype.CLASS = function() {
    return this.getToken(miniCSharpParser.CLASS, 0);
};

ProgramNContext.prototype.IDENTIFIER = function() {
    return this.getToken(miniCSharpParser.IDENTIFIER, 0);
};

ProgramNContext.prototype.BRACKETIZQ = function() {
    return this.getToken(miniCSharpParser.BRACKETIZQ, 0);
};

ProgramNContext.prototype.BRACKETDER = function() {
    return this.getToken(miniCSharpParser.BRACKETDER, 0);
};

ProgramNContext.prototype.constDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConstDeclContext);
    } else {
        return this.getTypedRuleContext(ConstDeclContext,i);
    }
};

ProgramNContext.prototype.varDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDeclContext);
    } else {
        return this.getTypedRuleContext(VarDeclContext,i);
    }
};

ProgramNContext.prototype.classDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassDeclContext);
    } else {
        return this.getTypedRuleContext(ClassDeclContext,i);
    }
};

ProgramNContext.prototype.methodDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MethodDeclContext);
    } else {
        return this.getTypedRuleContext(MethodDeclContext,i);
    }
};
ProgramNContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniCSharpParserVisitor ) {
        return visitor.visitProgramN(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniCSharpParser.ProgramContext = ProgramContext;

miniCSharpParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, miniCSharpParser.RULE_program);
    var _la = 0; // Token type
    try {
        localctx = new ProgramNContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 40;
        this.match(miniCSharpParser.CLASS);
        this.state = 41;
        this.match(miniCSharpParser.IDENTIFIER);
        this.state = 47;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << miniCSharpParser.CLASS) | (1 << miniCSharpParser.CHARDECL) | (1 << miniCSharpParser.INTDECL) | (1 << miniCSharpParser.FLOATDECL) | (1 << miniCSharpParser.BOOLEANDECL) | (1 << miniCSharpParser.STRINGDECL) | (1 << miniCSharpParser.CONST))) !== 0) || _la===miniCSharpParser.IDENTIFIER) {
            this.state = 45;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case miniCSharpParser.CONST:
                this.state = 42;
                this.constDecl();
                break;
            case miniCSharpParser.CHARDECL:
            case miniCSharpParser.INTDECL:
            case miniCSharpParser.FLOATDECL:
            case miniCSharpParser.BOOLEANDECL:
            case miniCSharpParser.STRINGDECL:
            case miniCSharpParser.IDENTIFIER:
                this.state = 43;
                this.varDecl();
                break;
            case miniCSharpParser.CLASS:
                this.state = 44;
                this.classDecl();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 49;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 50;
        this.match(miniCSharpParser.BRACKETIZQ);
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << miniCSharpParser.CHARDECL) | (1 << miniCSharpParser.INTDECL) | (1 << miniCSharpParser.FLOATDECL) | (1 << miniCSharpParser.BOOLEANDECL) | (1 << miniCSharpParser.STRINGDECL) | (1 << miniCSharpParser.VOID))) !== 0) || _la===miniCSharpParser.IDENTIFIER) {
            this.state = 51;
            this.methodDecl();
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 57;
        this.match(miniCSharpParser.BRACKETDER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConstDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniCSharpParser.RULE_constDecl;
    return this;
}

ConstDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConstDeclContext.prototype.constructor = ConstDeclContext;


 
ConstDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ConstDeclaRuleContext(parser, ctx) {
	ConstDeclContext.call(this, parser);
    ConstDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ConstDeclaRuleContext.prototype = Object.create(ConstDeclContext.prototype);
ConstDeclaRuleContext.prototype.constructor = ConstDeclaRuleContext;

miniCSharpParser.ConstDeclaRuleContext = ConstDeclaRuleContext;

ConstDeclaRuleContext.prototype.CONST = function() {
    return this.getToken(miniCSharpParser.CONST, 0);
};

ConstDeclaRuleContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

ConstDeclaRuleContext.prototype.IDENTIFIER = function() {
    return this.getToken(miniCSharpParser.IDENTIFIER, 0);
};

ConstDeclaRuleContext.prototype.ASIGN = function() {
    return this.getToken(miniCSharpParser.ASIGN, 0);
};

ConstDeclaRuleContext.prototype.PyCOMA = function() {
    return this.getToken(miniCSharpParser.PyCOMA, 0);
};

ConstDeclaRuleContext.prototype.NUMBER = function() {
    return this.getToken(miniCSharpParser.NUMBER, 0);
};

ConstDeclaRuleContext.prototype.CHARCONST = function() {
    return this.getToken(miniCSharpParser.CHARCONST, 0);
};
ConstDeclaRuleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniCSharpParserVisitor ) {
        return visitor.visitConstDeclaRule(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniCSharpParser.ConstDeclContext = ConstDeclContext;

miniCSharpParser.prototype.constDecl = function() {

    var localctx = new ConstDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, miniCSharpParser.RULE_constDecl);
    var _la = 0; // Token type
    try {
        localctx = new ConstDeclaRuleContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 59;
        this.match(miniCSharpParser.CONST);
        this.state = 60;
        this.type();
        this.state = 61;
        this.match(miniCSharpParser.IDENTIFIER);
        this.state = 62;
        this.match(miniCSharpParser.ASIGN);
        this.state = 63;
        _la = this._input.LA(1);
        if(!(_la===miniCSharpParser.NUMBER || _la===miniCSharpParser.CHARCONST)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 64;
        this.match(miniCSharpParser.PyCOMA);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VarDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniCSharpParser.RULE_varDecl;
    return this;
}

VarDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarDeclContext.prototype.constructor = VarDeclContext;


 
VarDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function VarDeclaRuleContext(parser, ctx) {
	VarDeclContext.call(this, parser);
    VarDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

VarDeclaRuleContext.prototype = Object.create(VarDeclContext.prototype);
VarDeclaRuleContext.prototype.constructor = VarDeclaRuleContext;

miniCSharpParser.VarDeclaRuleContext = VarDeclaRuleContext;

VarDeclaRuleContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

VarDeclaRuleContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(miniCSharpParser.IDENTIFIER);
    } else {
        return this.getToken(miniCSharpParser.IDENTIFIER, i);
    }
};


VarDeclaRuleContext.prototype.PyCOMA = function() {
    return this.getToken(miniCSharpParser.PyCOMA, 0);
};

VarDeclaRuleContext.prototype.CORCHETEIZQ = function() {
    return this.getToken(miniCSharpParser.CORCHETEIZQ, 0);
};

VarDeclaRuleContext.prototype.CORCHETEDER = function() {
    return this.getToken(miniCSharpParser.CORCHETEDER, 0);
};

VarDeclaRuleContext.prototype.COMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(miniCSharpParser.COMA);
    } else {
        return this.getToken(miniCSharpParser.COMA, i);
    }
};

VarDeclaRuleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniCSharpParserVisitor ) {
        return visitor.visitVarDeclaRule(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniCSharpParser.VarDeclContext = VarDeclContext;

miniCSharpParser.prototype.varDecl = function() {

    var localctx = new VarDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, miniCSharpParser.RULE_varDecl);
    var _la = 0; // Token type
    try {
        localctx = new VarDeclaRuleContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 66;
        this.type();
        this.state = 69;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===miniCSharpParser.CORCHETEIZQ) {
            this.state = 67;
            this.match(miniCSharpParser.CORCHETEIZQ);
            this.state = 68;
            this.match(miniCSharpParser.CORCHETEDER);
        }

        this.state = 71;
        this.match(miniCSharpParser.IDENTIFIER);
        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===miniCSharpParser.COMA) {
            this.state = 72;
            this.match(miniCSharpParser.COMA);
            this.state = 73;
            this.match(miniCSharpParser.IDENTIFIER);
            this.state = 78;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 79;
        this.match(miniCSharpParser.PyCOMA);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniCSharpParser.RULE_classDecl;
    return this;
}

ClassDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassDeclContext.prototype.constructor = ClassDeclContext;


 
ClassDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ClassDeclRuleContext(parser, ctx) {
	ClassDeclContext.call(this, parser);
    ClassDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ClassDeclRuleContext.prototype = Object.create(ClassDeclContext.prototype);
ClassDeclRuleContext.prototype.constructor = ClassDeclRuleContext;

miniCSharpParser.ClassDeclRuleContext = ClassDeclRuleContext;

ClassDeclRuleContext.prototype.CLASS = function() {
    return this.getToken(miniCSharpParser.CLASS, 0);
};

ClassDeclRuleContext.prototype.IDENTIFIER = function() {
    return this.getToken(miniCSharpParser.IDENTIFIER, 0);
};

ClassDeclRuleContext.prototype.BRACKETIZQ = function() {
    return this.getToken(miniCSharpParser.BRACKETIZQ, 0);
};

ClassDeclRuleContext.prototype.BRACKETDER = function() {
    return this.getToken(miniCSharpParser.BRACKETDER, 0);
};

ClassDeclRuleContext.prototype.varDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDeclContext);
    } else {
        return this.getTypedRuleContext(VarDeclContext,i);
    }
};
ClassDeclRuleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniCSharpParserVisitor ) {
        return visitor.visitClassDeclRule(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniCSharpParser.ClassDeclContext = ClassDeclContext;

miniCSharpParser.prototype.classDecl = function() {

    var localctx = new ClassDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, miniCSharpParser.RULE_classDecl);
    var _la = 0; // Token type
    try {
        localctx = new ClassDeclRuleContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this.match(miniCSharpParser.CLASS);
        this.state = 82;
        this.match(miniCSharpParser.IDENTIFIER);
        this.state = 83;
        this.match(miniCSharpParser.BRACKETIZQ);
        this.state = 87;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << miniCSharpParser.CHARDECL) | (1 << miniCSharpParser.INTDECL) | (1 << miniCSharpParser.FLOATDECL) | (1 << miniCSharpParser.BOOLEANDECL) | (1 << miniCSharpParser.STRINGDECL))) !== 0) || _la===miniCSharpParser.IDENTIFIER) {
            this.state = 84;
            this.varDecl();
            this.state = 89;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 90;
        this.match(miniCSharpParser.BRACKETDER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MethodDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniCSharpParser.RULE_methodDecl;
    return this;
}

MethodDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MethodDeclContext.prototype.constructor = MethodDeclContext;


 
MethodDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function MethodDeclRuleContext(parser, ctx) {
	MethodDeclContext.call(this, parser);
    MethodDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MethodDeclRuleContext.prototype = Object.create(MethodDeclContext.prototype);
MethodDeclRuleContext.prototype.constructor = MethodDeclRuleContext;

miniCSharpParser.MethodDeclRuleContext = MethodDeclRuleContext;

MethodDeclRuleContext.prototype.IDENTIFIER = function() {
    return this.getToken(miniCSharpParser.IDENTIFIER, 0);
};

MethodDeclRuleContext.prototype.PIZQ = function() {
    return this.getToken(miniCSharpParser.PIZQ, 0);
};

MethodDeclRuleContext.prototype.PDER = function() {
    return this.getToken(miniCSharpParser.PDER, 0);
};

MethodDeclRuleContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

MethodDeclRuleContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

MethodDeclRuleContext.prototype.VOID = function() {
    return this.getToken(miniCSharpParser.VOID, 0);
};

MethodDeclRuleContext.prototype.formPars = function() {
    return this.getTypedRuleContext(FormParsContext,0);
};

MethodDeclRuleContext.prototype.varDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDeclContext);
    } else {
        return this.getTypedRuleContext(VarDeclContext,i);
    }
};
MethodDeclRuleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniCSharpParserVisitor ) {
        return visitor.visitMethodDeclRule(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniCSharpParser.MethodDeclContext = MethodDeclContext;

miniCSharpParser.prototype.methodDecl = function() {

    var localctx = new MethodDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, miniCSharpParser.RULE_methodDecl);
    var _la = 0; // Token type
    try {
        localctx = new MethodDeclRuleContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case miniCSharpParser.CHARDECL:
        case miniCSharpParser.INTDECL:
        case miniCSharpParser.FLOATDECL:
        case miniCSharpParser.BOOLEANDECL:
        case miniCSharpParser.STRINGDECL:
        case miniCSharpParser.IDENTIFIER:
            this.state = 92;
            this.type();
            break;
        case miniCSharpParser.VOID:
            this.state = 93;
            this.match(miniCSharpParser.VOID);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 96;
        this.match(miniCSharpParser.IDENTIFIER);
        this.state = 97;
        this.match(miniCSharpParser.PIZQ);
        this.state = 99;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << miniCSharpParser.CHARDECL) | (1 << miniCSharpParser.INTDECL) | (1 << miniCSharpParser.FLOATDECL) | (1 << miniCSharpParser.BOOLEANDECL) | (1 << miniCSharpParser.STRINGDECL))) !== 0) || _la===miniCSharpParser.IDENTIFIER) {
            this.state = 98;
            this.formPars();
        }

        this.state = 101;
        this.match(miniCSharpParser.PDER);
        this.state = 105;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << miniCSharpParser.CHARDECL) | (1 << miniCSharpParser.INTDECL) | (1 << miniCSharpParser.FLOATDECL) | (1 << miniCSharpParser.BOOLEANDECL) | (1 << miniCSharpParser.STRINGDECL))) !== 0) || _la===miniCSharpParser.IDENTIFIER) {
            this.state = 102;
            this.varDecl();
            this.state = 107;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 108;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FormParsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniCSharpParser.RULE_formPars;
    return this;
}

FormParsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormParsContext.prototype.constructor = FormParsContext;


 
FormParsContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function FormParamsRuleContext(parser, ctx) {
	FormParsContext.call(this, parser);
    FormParsContext.prototype.copyFrom.call(this, ctx);
    return this;
}

FormParamsRuleContext.prototype = Object.create(FormParsContext.prototype);
FormParamsRuleContext.prototype.constructor = FormParamsRuleContext;

miniCSharpParser.FormParamsRuleContext = FormParamsRuleContext;

FormParamsRuleContext.prototype.type = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TypeContext);
    } else {
        return this.getTypedRuleContext(TypeContext,i);
    }
};

FormParamsRuleContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(miniCSharpParser.IDENTIFIER);
    } else {
        return this.getToken(miniCSharpParser.IDENTIFIER, i);
    }
};

